--- a/extension-config.json
+++ b/extension-config.json
@@ -1,6 +1,6 @@
 {
   "id": "@shopgate-project/userlike",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.1",
   "components": [
     {
       "id": "Subscribers",
@@ -28,6 +28,15 @@
       "params": {
         "type": "json",
         "label": "Page patterns which should not have the chat widget"
+      }
+    },
+    "iframeChatTitle": {
+      "type": "admin",
+      "destination": "frontend",
+      "default": "Kundensupport-Chat",
+      "params": {
+        "type": "json",
+        "label": "Specifies the title attribute of the chat iframe"
       }
     }
   }
