--- a/extension-config.json
+++ b/extension-config.json
@@ -1,6 +1,6 @@
 {
   "id": "@shopgate-project/userlike",
-  "version": "1.2.0-beta.1",
+  "version": "1.2.0",
   "components": [
     {
       "id": "Subscribers",
